--- a/Segmenting and Clustering Neighborhoods in Toronto (Coursera)-Copy1.ipynb
+++ b/Segmenting and Clustering Neighborhoods in Toronto (Coursera)-Copy1.ipynb
@@ -1,12 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##                                  Segmenting Neighborhoods in Toronto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#!conda update -n base -c defaults conda\n",
+    "#!conda install -c conda-forge geopy --yes \n",
+    "#!conda install -c conda-forge folium=0.5.0 --yes \n",
+    "#!conda install -c anaconda beautifulsoup4 \n",
+    "#print('Beautiful soup is installed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np # library to handle data in a vectorized manner\n",
     "import pandas as pd # library for data analsysis\n",
     "import json # library to handle JSON files"
@@ -14,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,17 +61,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!conda install -c conda-forge geopy --yes \n",
     "from geopy.geocoders import Nominatim # convert an address into latitude and longitude values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +83,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium # map rendering library"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -70,29 +104,22 @@
     }
    ],
    "source": [
-    "#!conda install -c conda-forge folium=0.5.0 --yes \n",
-    "import folium # map rendering library\n",
-    "\n",
+    "from bs4 import BeautifulSoup\n",
     "print('Libraries imported.')"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#!conda install -c anaconda beautifulsoup4 \n",
-    "#print('Beautiful soup is installed')"
+    "---"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 8,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from bs4 import BeautifulSoup"
+    "### Taking data from internet page and adding  table cells text to numpy array"
    ]
   },
   {
@@ -113,7 +140,7 @@
       "  </title>\n",
       "  <script>\n",
       "   document.documentElement.className=document.documentElement.className.replace(/(^|\\s)client-nojs(\\s|$)/,\"$1client-js$2\");RLCONF={\"wgCanonicalNamespace\":\"\",\"wgCanonicalSpecialPageName\":!1,\"wgNamespaceNumber\":0,\"wgPageName\":\"List_of_postal_codes_of_Canada:_M\",\"wgTitle\":\"List of postal codes of Canada: M\",\"wgCurRevisionId\":890001695,\"wgRevisionId\":890001695,\"wgArticleId\":539066,\"wgIsArticle\":!0,\"wgIsRedirect\":!1,\"wgAction\":\"view\",\"wgUserName\":null,\"wgUserGroups\":[\"*\"],\"wgCategories\":[\"Communications in Ontario\",\"Postal codes in Canada\",\"Toronto\",\"Ontario-related lists\"],\"wgBreakFrames\":!1,\"wgPageContentLanguage\":\"en\",\"wgPageContentModel\":\"wikitext\",\"wgSeparatorTransformTable\":[\"\",\"\"],\"wgDigitTransformTable\":[\"\",\"\"],\"wgDefaultDateFormat\":\"dmy\",\"wgMonthNames\":[\"\",\"January\",\"February\",\"March\",\"April\",\"May\",\"June\",\"July\",\"August\",\"September\",\"October\",\"November\",\"December\"],\"wgMonthNamesShort\":[\"\",\"Jan\",\"Feb\",\"Mar\",\"Apr\",\"May\",\"Jun\",\"Jul\",\"Aug\",\"Sep\",\"Oct\",\"Nov\",\"Dec\"],\n",
-      "\"wgRelevantPageName\":\"List_of_postal_codes_of_Canada:_M\",\"wgRelevantArticleId\":539066,\"wgRequestId\":\"XO-5ZgpAME4AAG58u8UAAAAN\",\"wgCSPNonce\":!1,\"wgIsProbablyEditable\":!0,\"wgRelevantPageIsProbablyEditable\":!0,\"wgRestrictionEdit\":[],\"wgRestrictionMove\":[],\"wgMediaViewerOnClick\":!0,\"wgMediaViewerEnabledByDefault\":!0,\"wgPopupsReferencePreviews\":!1,\"wgPopupsConflictsWithNavPopupGadget\":!1,\"wgVisualEditor\":{\"pageLanguageCode\":\"en\",\"pageLanguageDir\":\"ltr\",\"pageVariantFallbacks\":\"en\"},\"wgMFDisplayWikibaseDescriptions\":{\"search\":!0,\"nearby\":!0,\"watchlist\":!0,\"tagline\":!1},\"wgWMESchemaEditAttemptStepOversample\":!1,\"wgPoweredByHHVM\":!0,\"wgULSCurrentAutonym\":\"English\",\"wgNoticeProject\":\"wikipedia\",\"wgCentralNoticeCategoriesUsingLegacy\":[\"Fundraising\",\"fundraising\"],\"wgWikibaseItemId\":\"Q3248240\",\"wgCentralAuthMobileDomain\":!1,\"wgEditSubmitButtonLabelPublish\":!0};RLSTATE={\"ext.gadget.charinsert-styles\":\"ready\",\"ext.globalCssJs.user.styles\":\"ready\",\n",
+      "\"wgRelevantPageName\":\"List_of_postal_codes_of_Canada:_M\",\"wgRelevantArticleId\":539066,\"wgRequestId\":\"XPKswQpAAEUAAG3IfaUAAAAV\",\"wgCSPNonce\":!1,\"wgIsProbablyEditable\":!0,\"wgRelevantPageIsProbablyEditable\":!0,\"wgRestrictionEdit\":[],\"wgRestrictionMove\":[],\"wgMediaViewerOnClick\":!0,\"wgMediaViewerEnabledByDefault\":!0,\"wgPopupsReferencePreviews\":!1,\"wgPopupsConflictsWithNavPopupGadget\":!1,\"wgVisualEditor\":{\"pageLanguageCode\":\"en\",\"pageLanguageDir\":\"ltr\",\"pageVariantFallbacks\":\"en\"},\"wgMFDisplayWikibaseDescriptions\":{\"search\":!0,\"nearby\":!0,\"watchlist\":!0,\"tagline\":!1},\"wgWMESchemaEditAttemptStepOversample\":!1,\"wgPoweredByHHVM\":!0,\"wgULSCurrentAutonym\":\"English\",\"wgNoticeProject\":\"wikipedia\",\"wgCentralNoticeCategoriesUsingLegacy\":[\"Fundraising\",\"fundraising\"],\"wgWikibaseItemId\":\"Q3248240\",\"wgCentralAuthMobileDomain\":!1,\"wgEditSubmitButtonLabelPublish\":!0};RLSTATE={\"ext.gadget.charinsert-styles\":\"ready\",\"ext.globalCssJs.user.styles\":\"ready\",\n",
       "\"ext.globalCssJs.site.styles\":\"ready\",\"site.styles\":\"ready\",\"noscript\":\"ready\",\"user.styles\":\"ready\",\"ext.globalCssJs.user\":\"ready\",\"ext.globalCssJs.site\":\"ready\",\"user\":\"ready\",\"user.options\":\"ready\",\"user.tokens\":\"loading\",\"ext.cite.styles\":\"ready\",\"mediawiki.legacy.shared\":\"ready\",\"mediawiki.legacy.commonPrint\":\"ready\",\"jquery.tablesorter.styles\":\"ready\",\"wikibase.client.init\":\"ready\",\"ext.visualEditor.desktopArticleTarget.noscript\":\"ready\",\"ext.uls.interlanguage\":\"ready\",\"ext.wikimediaBadges\":\"ready\",\"ext.3d.styles\":\"ready\",\"mediawiki.skinning.interface\":\"ready\",\"skins.vector.styles\":\"ready\"};RLPAGEMODULES=[\"ext.cite.ux-enhancements\",\"site\",\"mediawiki.page.startup\",\"mediawiki.page.ready\",\"jquery.tablesorter\",\"mediawiki.searchSuggest\",\"ext.gadget.teahouse\",\"ext.gadget.ReferenceTooltips\",\"ext.gadget.watchlist-notice\",\"ext.gadget.DRN-wizard\",\"ext.gadget.charinsert\",\"ext.gadget.refToolbar\",\"ext.gadget.extra-toolbar-buttons\",\"ext.gadget.switcher\",\"ext.centralauth.centralautologin\",\n",
       "\"mmv.head\",\"mmv.bootstrap.autostart\",\"ext.popups\",\"ext.visualEditor.desktopArticleTarget.init\",\"ext.visualEditor.targetLoader\",\"ext.eventLogging\",\"ext.wikimediaEvents\",\"ext.navigationTiming\",\"ext.uls.compactlinks\",\"ext.uls.interface\",\"ext.quicksurveys.init\",\"ext.centralNotice.geoIP\",\"ext.centralNotice.startUp\",\"skins.vector.js\"];\n",
       "  </script>\n",
@@ -4976,7 +5003,7 @@
       "   {\"@context\":\"https:\\/\\/schema.org\",\"@type\":\"Article\",\"name\":\"List of postal codes of Canada: M\",\"url\":\"https:\\/\\/en.wikipedia.org\\/wiki\\/List_of_postal_codes_of_Canada:_M\",\"sameAs\":\"http:\\/\\/www.wikidata.org\\/entity\\/Q3248240\",\"mainEntity\":\"http:\\/\\/www.wikidata.org\\/entity\\/Q3248240\",\"author\":{\"@type\":\"Organization\",\"name\":\"Contributors to Wikimedia projects\"},\"publisher\":{\"@type\":\"Organization\",\"name\":\"Wikimedia Foundation, Inc.\",\"logo\":{\"@type\":\"ImageObject\",\"url\":\"https:\\/\\/www.wikimedia.org\\/static\\/images\\/wmf-hor-googpub.png\"}},\"datePublished\":\"2004-03-20T10:02:13Z\",\"dateModified\":\"2019-03-29T11:01:52Z\",\"headline\":\"Wikimedia list article\"}\n",
       "  </script>\n",
       "  <script>\n",
-      "   (RLQ=window.RLQ||[]).push(function(){mw.config.set({\"wgBackendResponseTime\":112,\"wgHostname\":\"mw1243\"});});\n",
+      "   (RLQ=window.RLQ||[]).push(function(){mw.config.set({\"wgBackendResponseTime\":100,\"wgHostname\":\"mw1274\"});});\n",
       "  </script>\n",
       " </body>\n",
       "</html>\n",
@@ -5005,6 +5032,7 @@
     }
    ],
    "source": [
+    "# Check page title\n",
     "file_title = soup.title.text\n",
     "print(file_title)"
    ]
@@ -6485,49 +6513,6 @@
     {
      "data": {
       "text/plain": [
-       "'\\nPostcode\\nBorough\\nNeighbourhood\\n'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "table_headings = table.tr.text\n",
-    "table_headings"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [Postalcode, Borough, Neighborhood]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "# New dataframe\n",
-    "column_names = ['Postalcode','Borough', 'Neighborhood'] \n",
-    "toronto = pd.DataFrame(columns=column_names)\n",
-    "print(toronto)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "['M1A',\n",
        " 'Not assigned',\n",
        " 'Not assigned',\n",
@@ -7394,23 +7379,29 @@
        " 'Not assigned']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Numpy array takes all cells of table\n",
+    "# Numpy array takes all cells of table one by one and clears \\n\n",
     "toronto_np = []\n",
     "for col in table.find_all('td'):\n",
     "    toronto_np.append(col.text.rstrip('\\n'))\n",
-    "toronto_np    \n",
-    "        "
+    "toronto_np    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add data from numpy array to dataframe with checking 'Not assigned' values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -7540,8 +7531,8 @@
     "# Fill the dataframe from numpy array\n",
     "for j in range(len(toronto_np)-1):\n",
     "    if (j%3 == 0):                               # Taking every 3 cells from 1 dimension numpy array\n",
-    "        if (toronto_np[j+1] != 'Not assigned'):  # Cheking if Borough not assigned, ignoring if so\n",
-    "            if (toronto_np[j] == toronto_np[j-3]) & (toronto_np[j+1] == toronto_np[j-2]):\n",
+    "        if (toronto_np[j+1] != 'Not assigned'):  # ignoring if Borough is not assigned\n",
+    "            if (toronto_np[j] == toronto_np[j-3]) & (toronto_np[j+1] == toronto_np[j-2]): #cheking if Botough doubles the previous one\n",
     "                print(toronto_np[j])\n",
     "            Postalcode = toronto_np[j]\n",
     "            Borough = toronto_np[j+1]\n",
@@ -7549,14 +7540,14 @@
     "                Neighborhood = Borough\n",
     "            else:\n",
     "                Neighborhood = toronto_np[j+2]\n",
-    "            toronto = toronto.append({'Postalcode': Postalcode,   # Add row to dataframe\n",
+    "            toronto = toronto.append({'Postalcode': Postalcode,   # Add row to the dataframe\n",
     "                                    'Borough' : Borough,\n",
     "                                    'Neighborhood': Neighborhood}, ignore_index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -9284,7 +9275,7 @@
        "210                                     South of Bloor  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9295,7 +9286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -9304,7 +9295,7 @@
        "(211, 3)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9314,8 +9305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Grouping lines with similar Neighborhoods, adding comma"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9323,8 +9321,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Result"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -10188,7 +10193,7 @@
        "102  Kingsway Park South West, Mimico NW, The Queen...  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -10199,7 +10204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -10208,23 +10213,13 @@
        "(103, 3)"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "toronto2.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# +++ Убрать n\\\n",
-    "# Загрузить на Github"
    ]
   }
  ],
