--- a/Coursera capstone project (Intro).ipynb
+++ b/Coursera capstone project (Intro).ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Search for the most profitable locations to open a new business in Moscow. Where to open a pharmacy or a convinient shop? Where passability and competitive environment are the most profitable?\n",
+    "Search for the most profitable locations to open a new business in **Moscow**. Where to open a pharmacy or a convinient shop? Where passability and competitive environment are the most profitable?\n",
     "Moscow metro serves an average of 10 million passengers a day. Thus there are certain places what customers passes every day. \n",
     "Using foursquare data we will find out the best places for new customer business startup.\n",
     "This analysis will be interesting for retail business stakeholders."
