--- a/Final Capstone project.ipynb
+++ b/Final Capstone project.ipynb
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -1002,14 +1002,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: DGKYEQMKZGFLSASBFJOWQ21U53VX41HQKR4GW3AW2MWR153D\n",
-      "CLIENT_SECRET:MQ0P0SE1DC2I23VF022F0DGFKQFXFDU2P4TMXTDSBTJCK3YG\n"
+      "CLIENT_ID: \n",
+      "CLIENT_SECRET:\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'DGKYEQMKZGFLSASBFJOWQ21U53VX41HQKR4GW3AW2MWR153D' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'MQ0P0SE1DC2I23VF022F0DGFKQFXFDU2P4TMXTDSBTJCK3YG' # your Foursquare Secret\n",
+    "CLIENT_ID = '' #  Foursquare ID\n",
+    "CLIENT_SECRET = '' # Foursquare Secret\n",
     "VERSION = '20190711' # Foursquare API version\n",
     "\n",
     "print('Your credentails:')\n",
@@ -2175,7 +2175,7 @@
     "        if (no_pharmacy.loc[i,'StationID'] == j):\n",
     "            no_pharmacy.loc[i,'Venues count'] = m.loc[j,'Station']\n",
     "no_pharmacy.head()\n",
-    "#Список станций метро, у которых нет аптеки в пределах 200 метров с подсчитанным количеством других объектов"
+    "#List of no_farmacy stations with other venues count"
    ]
   },
   {
@@ -2379,19 +2379,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Количество станций метро без аптеки в шаговой доступности 215\n"
+      "Number of stations without nearby pharmacies 215\n"
      ]
     }
    ],
    "source": [
-    "print('Количество станций метро без аптеки в шаговой доступности', len(no_pharmacy))"
+    "print('Number of stations without nearby pharmacies', len(no_pharmacy))"
    ]
   },
   {
@@ -2403,11 +2403,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Нарисуем график трафика и количества объектов для станций без аптеки"
+    "#Plot for traffic and venues count"
    ]
   },
   {
@@ -2450,39 +2450,6 @@
    ],
    "source": [
     "plt.scatter(no_pharmacy['Traffic'], no_pharmacy['Venues count'], marker='o') "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2751, 8)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Убираем дубликаты из списка объектов.\n",
-    "moscow_drop = moscow_venues.drop_duplicates(subset=['Venue Latitude','Venue Longitude', 'Venue'])\n",
-    "moscow_drop.shape\n",
-    "#moscow_drop.to_excel('venues2.xlsx')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Вот теперь над no_pharmacy мы и будем делать кластеризацию. С надеждой на объяснимый результат.\n",
-    "#Ура!"
    ]
   },
   {
